RAG测试优化算法